fix modal z-index

--- a/components/TaskTableItem.module.scss
+++ b/components/TaskTableItem.module.scss
@@ -53,7 +53,6 @@
   text-align: center;
   visibility: hidden;
   position: relative;
-  z-index: 0;
   opacity: 0;
   &,
   div:first-child {
@@ -74,12 +73,15 @@
   }
   &.show {
     visibility: visible;
-    z-index: 4;
     &,
     div:first-child {
       opacity: 1;
       transform: translateY(0px);
       height: 150px;
+    }
+    .buttonWrapper {
+      position: relative;
+      z-index: 100;
     }
   }
 }
@@ -104,4 +106,8 @@
   button {
     margin: 0;
   }
+}
+.modal {
+  position: relative;
+  z-index: 5;
 }
