--- a/components/UI/Modal.module.scss
+++ b/components/UI/Modal.module.scss
@@ -9,7 +9,6 @@
   background-color: rgba($clr-body, 0.3);
   width: 100%;
   height: 100%;
-  z-index: 4;
   left: 0;
   top: 0;
   transition: all 0.2s ease-in-out;
